agergar informacion a la bd y mostrar en index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+.centered-card {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+}
