--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :userNmae, style: "display: block" %>
-    <%= form.text_field :userNmae %>
+    <%= form.label :userName, style: "display: block" %>
+    <%= form.text_field :userName %>
   </div>
 
   <div>
-    <%= form.label :descriptio, style: "display: block" %>
-    <%= form.text_field :descriptio %>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.text_field :description %>
   </div>
 
   <div>
