--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id tweet %>">
   <p>
-    <strong>Usernmae:</strong>
-    <%= tweet.userNmae %>
+    <strong>Usuario:</strong>
+    <%= tweet.userName %>
   </p>
 
   <p>
-    <strong>Descriptio:</strong>
-    <%= tweet.descriptio %>
+    <strong>Descripción:</strong>
+    <%= tweet.description %>
   </p>
 
 </div>
