--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,23 @@
  *= require_self
  */
 
+.content {
+	margin: 20px;
+	padding: 10px;
+}
+
+/* .content h1 {
+margin-bottom: 10px;
+} */
+
+/* .content p {
+margin-bottom: 20px;
+} */
+
+.custom-smaller-input {
+width: 300px !important; /
+}
+
 .centered-card {
 	display: flex;
 	justify-content: center;
