--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,10 +1,9 @@
-<h1>Editing tweet</h1>
+<h1 class="tittle">Editar tweet</h1>
 
 <%= render "form", tweet: @tweet %>
 
 <br>
 
 <div>
-  <%= link_to "Show this tweet", @tweet %> |
-  <%= link_to "Back to tweets", tweets_path %>
+  <%= link_to "Volver al inicio ", tweets_path, class: "btn btn-outline-warning button-back " %>
 </div>
