--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,22 +1,40 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Tweets</h1>
+<div class="d-flex justify-content-between align-items-center">
+  <h1 class="tittle">Tweets</h1>
 
-<%= link_to "Crear Tweet", new_tweet_path, class: "btn btn-outline-info"%>
+  <%= form_with url: tweets_path, method: :get do |form|%>
+    <div class="form-group d-flex mt-3 ml-3 search-form "> <!-- Agregamos la clase "ml-3" para agregar un margen izquierdo -->
+      <%= form.submit "Search", class: "btn btn-outline-primary me-2" %>
+      <%= form.text_field :query_text, class: "form-control custom-smaller-input", value: params[:query_text] %>
+    </div>
+  <% end %>
+</div>
 
-<div id="tweets" class="centered-card">
-  <div class="col-md-6">
-    <% @tweets.each do |tweet| %>
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title"><%= tweet.userName %></h5>
-          <p class="card-text"><%= tweet.description %></p>
-          <%= link_to "Ver Tweet", tweet, class: "btn btn-outline-secondary" %>
-        </div>
+
+
+<div class="d-flex justify-content-center mt-5">
+  <div class="col-md-4">
+    <div class="card mb-4">
+    <%= link_to "Crear Tweet", new_tweet_path, class: "btn btn-outline-success"%>
+      <div class="card-body">
+        <% @tweets.each do |tweet| %>
+          <div class="card mb-2">
+            <div class="card-body">
+              <h5 class="card-title"><%= tweet.userName %></h5>
+              <p class="card-text"><%= tweet.description %></p>
+              <div class="d-flex justify-content-end">
+                <%= link_to "Ver Tweet", tweet, class: "btn btn-outline-secondary buttons-index-show" %>
+              </div>
+            </div>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
+
+
 
 <div class="pagination justify-content-center">
   <%=raw pagy_nav(@pagy)%>
