--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New tweet</h1>
+<h1 class="tittle">New tweet</h1>
 
 <%= render "form", tweet: @tweet %>
 
 <br>
 
 <div>
-  <%= link_to "Back to tweets", tweets_path %>
+  <%= link_to "Volver al inicio", tweets_path, class: "btn btn-outline-warning button-back" %>
 </div>
