--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,19 +1,20 @@
-<!-- app/views/tweets/show.html.erb -->
 <p style="color: green"><%= notice %></p>
 
 <h1>Tweet</h1>
-<h5 class="card-title"><%= @tweet.userName %></h5>
+<h5><%= @tweet.userName %></h5>
 
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card mb-4">
-        <div class="card-body">
+        <div class="card-body ">
           <h5 class="card-title"><%= @tweet.userName %></h5>
           <p class="card-text"><%= @tweet.description %></p>
-          <%= link_to "Editar", edit_tweet_path(@tweet), class: "btn btn-outline-success" %>
-          <%= link_to "Volver", tweets_path, class: "btn btn-outline-warning" %>
-          <%= button_to "Eliminar", @tweet, method: :delete, class: "btn btn-outline-danger" %>
+          <div class="d-flex justify-content-end buttons-show">
+            <%= link_to "Volver", tweets_path, class: "btn btn-outline-warning button-show" %>
+            <%= link_to "Editar", edit_tweet_path(@tweet), class: "btn btn-outline-success button-show" %>
+            <%= button_to "Eliminar", @tweet, method: :delete, class: "btn btn-outline-danger" %>
+          </div>
         </div>
       </div>
     </div>
